Fix overflow on hover service

--- a/src/app/book/[url]/forms/forms.module.scss
+++ b/src/app/book/[url]/forms/forms.module.scss
@@ -61,6 +61,10 @@
 
 }
 
+.selectService {
+  padding-bottom: 15px;
+}
+
 .selectTime {
   display: flex;
   align-items: center;
