--- a/src/app/home/services/services.module.scss
+++ b/src/app/home/services/services.module.scss
@@ -48,7 +48,7 @@
   transition: transform 200ms;
 
   &:hover {
-    transform: scaleY(1.1) scaleX(1.02);
+    transform: scaleY(1.06) scaleX(1.01);
   }
 
   &:hover .edit {
